Corrected responsiveness on smaller screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -33,15 +33,19 @@ body {
 
 /* Main Navbar: This disappears when scrolling */
 .main-navbar {
+  background-color: white !important;
   transition: transform 0.3s ease-in-out;
 }
 
+
 /* Sticky Navbar: This appears after scrolling */
 .sticky-navbar {
+  background-color: white !important;
   top: 0;
   position: fixed;
   width: 100%;
   animation: slideDown 0.3s ease-in-out;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adjust the values for different shadow effects */
 }
 
 /* Slide-in animation for sticky navbar */
@@ -105,6 +109,10 @@ body {
     max-height: none !important;
 }
 
+.navbar-item {
+  color: black !important;
+}
+
 
 
 
@@ -121,6 +129,16 @@ body {
 
 .navbar-menu.is-active .navbar-item {
   animation: slideInLeft 0.5s ease-out both;
+}
+
+.navbar-menu {
+  background-color: #F7F7F7 !important;
+}
+
+
+.navbar-item:hover {
+  background-color: #0f2294 !important;
+  color: white !important;
 }
 
 /* Delay each menu item for a staggered effect */
@@ -551,6 +569,18 @@ body {
 
   .right-carousel, .left-carousel {
     display: none;
+  }
+}
+
+
+
+/*.logo.blue-btn:hover .facebook-image {
+  filter: brightness(1) drop-shadow(0px 0px 20px rgba(0, 111, 255, 0.9)); !* Intense glow on image *!
+}*/
+
+@media (max-width: 390px) {
+  html {
+    width: 115% !important;
   }
 }
 
